Bug 1881457 - Keep saving mFocusedValue. r=smaug

This deletion was an oversight of the regressing bug. Kind of
embarrassing we didn't have a test for it...

Differential Revision: https://phabricator.services.mozilla.com/D202449